--- a/db/dinners.yml
+++ b/db/dinners.yml
@@ -8,6 +8,7 @@
     :red_onion: 1
   protein: beef
   prep_time: 3600
+  id: 1
 - !ruby/object:Dinner
   name: Parmy
   ingredients:
@@ -18,6 +19,7 @@
     :potato_chips: 500g
   protein: chicken
   prep_time: 3600
+  id: 2
 - !ruby/object:Dinner
   name: Carbonara
   ingredients:
@@ -28,6 +30,7 @@
     :pasta: 350g
   protein: pork
   prep_time: 3600
+  id: 3
 - !ruby/object:Dinner
   name: Chicken Curry
   ingredients:
@@ -36,6 +39,7 @@
     :spices: true
   protein: beef
   prep_time: 1800
+  id: 4
 - !ruby/object:Dinner
   name: Kebab
   ingredients:
@@ -46,6 +50,7 @@
     :onion: 1
   protein: beef
   prep_time: 3600
+  id: 5
 - !ruby/object:Dinner
   name: Fish Chips
   ingredients:
@@ -53,6 +58,7 @@
     :chips: 300g
   protein: fish
   prep_time: 3600
+  id: 6
 - !ruby/object:Dinner
   name: Tomoto Chicken
   ingredients:
@@ -64,6 +70,7 @@
     :onion: 1
   protein: chicken
   prep_time: 3600
+  id: 7
 - !ruby/object:Dinner
   name: Sushi
   ingredients:
@@ -73,6 +80,7 @@
     :kfc_spices: 1
   protein: chicken
   prep_time: 7200
+  id: 8
 - !ruby/object:Dinner
   name: Dongsnmash
   ingredients:
@@ -82,6 +90,7 @@
     :vegtables: 1
   protein: beef
   prep_time: 3600
+  id: 9
 - !ruby/object:Dinner
   name: Pizza
   ingredients:
@@ -96,6 +105,7 @@
     :lebo_bread: 2
   protein: mix
   prep_time: 2700
+  id: 10
 - !ruby/object:Dinner
   name: Beef Burgers
   ingredients:
@@ -112,6 +122,7 @@
     :mustard: true
   protein: beef
   prep_time: 3600
+  id: 11
 - !ruby/object:Dinner
   name: Tex Mex Chicken
   ingredients:
@@ -121,6 +132,7 @@
     :vegtables: true
   protein: chicken
   prep_time: 3600
+  id: 12
 - !ruby/object:Dinner
   name: Shepards Pie
   ingredients:
@@ -134,6 +146,7 @@
     :garlic: true
   protein: beef
   prep_time: 10800
+  id: 13
 - !ruby/object:Dinner
   name: Strogenoff
   ingredients:
@@ -147,6 +160,7 @@
     :spices: true
   protein: beef
   prep_time: 7200
+  id: 14
 - !ruby/object:Dinner
   name: Stew
   ingredients:
@@ -159,6 +173,7 @@
     :zucchini: 1
   protein: beef
   prep_time: 10800
+  id: 15
 - !ruby/object:Dinner
   name: Chicken Wings
   ingredients:
@@ -170,6 +185,7 @@
     :garlic: true
   protein: chicken
   prep_time: 3600
+  id: 16
 - !ruby/object:Dinner
   name: Mongolian Beef
   ingredients:
@@ -184,6 +200,7 @@
     :mongolian_sauce: true
   protein: beef
   prep_time: 3600
+  id: 17
 - !ruby/object:Dinner
   name: Seafood
   ingredients:
@@ -195,6 +212,7 @@
     :salad: true
   protein: fish
   prep_time: :unknown
+  id: 18
 - !ruby/object:Dinner
   name: Curry Sausages
   ingredients:
@@ -204,9 +222,11 @@
     :spices: true
   protein: beef
   prep_time: 3600
+  id: 19
 - !ruby/object:Dinner
   name: Random
   ingredients:
-    :money: $80
+    :money: "$80"
   protein: random
   prep_time: 3600
+  id: 20
